--- a/src/components/work/projects/Projects.scss
+++ b/src/components/work/projects/Projects.scss
@@ -11,6 +11,7 @@
     width: 130rem;
     top: 105%;
     left: 50%;
+    overflow: hidden;
     transform: translate(-50%, -50%);
     @include respond(tab-land){
         width: 100rem;
