--- a/src/components/work/projects/ProjectItem.scss
+++ b/src/components/work/projects/ProjectItem.scss
@@ -50,6 +50,7 @@
         font-family: "Montserrat";
         font-size: 2rem;
         color: $color-slate-light;
+        letter-spacing: .2rem;
     }
 
     &__description {
@@ -58,6 +59,7 @@
         font-size: 1.5rem;
         color: $color-slate;
         line-height: 1.5;
+        padding: 0rem 2rem;
     }
 
     &__buttons {
