--- a/src/components/home/technologies/Technologies.scss
+++ b/src/components/home/technologies/Technologies.scss
@@ -42,6 +42,7 @@
         font-size: 2.4rem;
         font-weight: 700;
         background-position: top;
+        letter-spacing: .2rem;
     }
     &__text{
         font-family: "Oxanium";
@@ -50,6 +51,7 @@
         font-weight: 600;
         text-align: center;
         line-height: 1.6;
+        padding: 0rem 2rem;
     }
     &__introduction {
         font-size: 1.5rem;
