--- a/src/components/work/projects/ProjectItem.scss
+++ b/src/components/work/projects/ProjectItem.scss
@@ -11,6 +11,7 @@
     justify-content: space-around;
     border: .1rem solid $color-green;
     transition: all .3s;
+    overflow: hidden;
     @include respond(tab-land) {
         width: 40rem;
     }
