--- a/src/components/home/technologies/Technologies.scss
+++ b/src/components/home/technologies/Technologies.scss
@@ -1,39 +1,38 @@
 @import "../../../App.scss";
 
 .technologies {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: absolute;
-    height: 70rem;
-    width: 120rem;
-    top: 140%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    @include respond(tab-land) {
-        width: 100rem;
-    }
+    height: 70vh;
     @include respond(tab-port) {
-        top: 160%;
-        flex-direction: column;
+        height: 120vh;
+    }
+    &__wrapper {
+        display: flex;
         align-items: center;
-        justify-content: space-evenly;
-        height: 120rem;
-        width: 53rem;
+        position: relative;
+        justify-content: space-around;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        height: 99%;
+        @include respond(tab-port) {
+            flex-direction: column;
+        }
     }
-    @include respond(phone) {
-        width: 38rem;
-    }
-    &__box{
+    &__box {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        width: 45rem;
+        width: 48%;
         box-shadow: 0rem 1.5rem 4rem black;
-        height: 60rem;
+        height: 98%;
         @include respond(phone) {
             width: 40rem;
+        }
+        @include respond(tab-port) {
+            height: 50%;
+            width: 75%;
         }
     }
     &__title {
@@ -43,6 +42,9 @@
         font-weight: 700;
         background-position: top;
         letter-spacing: .2rem;
+        @include respond(phone) {
+            font-size: 2rem;
+        }
     }
     &__text{
         font-family: "Oxanium";
@@ -52,28 +54,31 @@
         text-align: center;
         line-height: 1.6;
         padding: 0rem 2rem;
+        @include respond(phone) {
+            padding: 0rem 1rem;
+        }
     }
     &__introduction {
         font-size: 1.5rem;
         color: $color-slate-light;
         font-family: "Montserrat";
     }
+    &__img__wrapper {
+        width: 35%;
+        @include respond(tab-port) {
+            width: 60%;
+        }
+    }
     &__image {
-        height: 50rem;
+        width: 100%;
         background-size: cover;
         border-radius: .5rem;
         box-shadow: 0rem 1rem 3rem black;
-        @include respond(tab-land) {
-            height: 40rem;
-        }
-        @include respond(phone) {
-            height: 38rem;
-        }
     }
 
     &__technology {
-        width: 30rem;
-        height: 30rem;
+        width: 95%;
+        height: 30%;
         display: flex;
         flex-wrap: wrap;
         list-style-type: none;
@@ -82,7 +87,11 @@
             font-family: "Oxanium";
             font-size: 1.5rem;
             color: $color-green;
-            width: 10.5rem;
+            width: 40%;
+            text-align: center;
+            @include respond(phone) {
+                width: 40%;
+            }
         }
     }
 }
