--- a/src/components/work/projects/Projects.scss
+++ b/src/components/work/projects/Projects.scss
@@ -2,37 +2,46 @@
 
 
 .projects {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    position: absolute;
-    height: 120rem;
-    width: 130rem;
-    top: 105%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-
-    @include respond(tab-land){
-        width: 100rem;
+    height: 100vh;
+    position: relative;
+    &__wrapper {
+        top: 180%;
+        left: 50%;
+        position: relative;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 300%;
+        @include respond(tab-port) {
+            flex-direction: column;
+            align-items: center;
+            flex-wrap: nowrap;
+            height: 500%;
+            top: 280%;
+            margin-bottom: 3rem;
+        }
     }
 
-    @include respond(tab-port) {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 50rem;
-        height: auto;
-        top: 200%;
+    &__title {
+        position: absolute;
+        top: 19%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: $color-white;
+        font-family: "Montserrat";
+        font-size: 3rem;
+        font-weight: bold;
+        width: 65%;
+        text-align: center;
+        height: 13%;
+        @include respond(phone) {
+            width: 95%;
+            top: 22%;
+            height: 16%;
+            overflow: auto;
+        }
     }
-
-    @include respond(phone) {
-        width: 35rem;
-        top: 195%;
-        margin-top: 5rem;
-    }
-
-
 }
