--- a/src/App.scss
+++ b/src/App.scss
@@ -68,14 +68,12 @@ body {
 
 
 // animations
-@keyframes moveInLeft {
+@keyframes fadeNavOne {
     0% {
-        opacity: 0;
-        transform: translateX(-100rem);
+        transform: translate(-15rem, -30rem)
     }
 
     100% {
-        opacity: 1;
-        transform: translateX(0);
+        transform: translate(0rem, 0rem)
     }
 }
