--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,46 +1,42 @@
 @import "../../App.scss";
 
 .contact {
-    height: 65rem;
-    width: 80rem;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    @include respond(tab-port) {
-        width: 50rem;
-    }
-    @include respond(phone) {
-        top: 57%;
-        width: 35rem;
+    height: 100vh;
+    position: relative;
+    &__wrapper {
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        position: absolute;
+        height: 80%;
+        width: 70%;
+        @include respond(tab-port) {
+            width: 85%;
+        }
     }
     &__form {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-around;
-        height: 40rem;
-        width: 40rem;
-        @include respond(phone) {
-            width: 33rem;
-        }
+        height: 100%;
+        width: 100%;
         &__input {
-            margin-bottom: auto;
-            height: 3rem;
+            height: 8%;
             outline: none;
             font-weight: 600;
             border: none;
             color: $color-slate-light;
-            border-radius: .3rem;
-            width: 35rem;
+            border-radius: 0.3rem;
+            width: 50%;
             background-color: $color-primary-light;
             &::placeholder {
                 font-weight: 700;
-                letter-spacing: .2rem;
+                letter-spacing: 0.2rem;
                 padding-left: 1rem;
                 color: $color-slate;
             }
@@ -49,13 +45,16 @@
             }
 
             &-message {
-                height: 7rem;
+                height: 13%;
                 word-break: break-all;
-                word-wrap: break-word;    
+                word-wrap: break-word;
+            }
+            @include respond(tab-port) {
+                width: 70%;
             }
         }
         &__label {
-            margin-top: 1rem;
+            margin-top: 5rem;
             font-family: "Oxanium";
             font-size: 1.5rem;
             color: $color-slate;
@@ -64,11 +63,11 @@
             align-self: center;
             padding: 1rem 2rem;
             background-color: transparent;
-            border: .1rem solid $color-green;
+            border: 0.1rem solid $color-green;
             font-family: "Oxanium";
-            border-radius: .4rem;
+            border-radius: 0.4rem;
             color: $color-green;
-            transition: all .3s;
+            transition: all 0.3s;
             cursor: pointer;
             text-transform: uppercase;
             font-weight: 600;
@@ -89,6 +88,7 @@
         font-size: 2.5rem;
         color: $color-slate;
         text-align: center;
+        margin-bottom: auto;
     }
     &__success {
         font-family: "Oxanium";
