Big refactoring, last two projects removed, contacts page removed, the get in touch button at the home page directs you to sending me an email, also added new technologies and changed the about me text, aswell as the text in the header, rezipe project is also added.

--- a/src/components/work/projects/ProjectItem.scss
+++ b/src/components/work/projects/ProjectItem.scss
@@ -78,6 +78,7 @@
                 color: lightblue;
                 &:hover{
                     background-color: $color-green;
+                    border: .2rem solid black;
                 }
             }
             &-git {
@@ -85,6 +86,7 @@
                 color: $color-green;
                 &:hover {
                     background-color: lightblue;
+                    border: .2rem solid black;
                 }
             }
         }
