styled scrollbar and changed text of technologies

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,13 @@ body {
     box-sizing: border-box;
     font-weight: 400;
     background-color: $color-primary;
+      &::-webkit-scrollbar {
+    width: .8rem;
+    background-color: $color-grey-dark;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-green;
+  }
 }
 
 
