--- a/src/components/home/technologies/Technologies.scss
+++ b/src/components/home/technologies/Technologies.scss
@@ -50,6 +50,7 @@
         font-family: "Oxanium";
         color: $color-slate;
         font-size: 1.5rem;
+        text-transform: capitalize;
         font-weight: 600;
         text-align: center;
         line-height: 1.6;
